--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: rgb(0, 0, 0);
+  font-size: 48px;
 }
 
 * {
@@ -15,8 +16,13 @@ body {
 }
 
 main {
-  height: 600px;
   width: 100%;
+}
+
+button {
+  font-size: 32px;
+  width: 25%;
+  height: 70%;
 }
 
 /* 
@@ -26,13 +32,12 @@ LAYOUT CSS
 */
 
 .screen {
-  height: 150px;
+  height: 15vh;
   width: 100%;
   background-color: rgb(180, 66, 66);
 }
 
 .buttons {
-  height: 550px;
   width: 100%;
   background-color: rgb(85, 85, 85);
 }
@@ -45,8 +50,8 @@ BUTTONS CSS
 
 .buttons {
   display: grid;
-  grid-template-columns: 1fr 100px;
-  grid-template-rows: 100px 1fr;
+  grid-template-columns: 1fr 25vw;
+  grid-template-rows: 15vh 1fr;
   grid-template-areas:
     "alias-bf alias-op"
     "alias-n alias-op";
@@ -74,6 +79,48 @@ NUMBERS CSS
 */
 
 .numbers {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  height: 70vh;
+}
+
+.num-sections {
   display: flex;
-  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.num-sections button {
+  font-size: 80%;
+}
+
+/* 
+************************************
+OPERATOR BUTTONS
+************************************
+*/
+
+.operators {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.operators button {
+  height: 15%;
+  width: 50%;
+  margin: 10px;
+}
+
+/* 
+************************************
+MEDIA QUERIES
+************************************
+*/
+
+@media (min-height: 600px) {
+  .screen {
+    height: 100px;
+  }
 }
